# filia

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml
detect-flow/: CMakeLists.txt  detect-flow.cpp
example/: eval_change_values.py  test_listcomp.py
example/scope_tests/: list_comp.py  subscript.py  with.py
include/JavaScript/: JavaScriptDialect.td  JavaScriptTypes.h  JavaScriptTypes.td
include/Python/: PythonDialect.td  PythonLoadStorePass.h  PythonOps.h  PythonOps.td  PythonTypes.td
include/Python-c/: Dialects.h
js-mlir-translator/: .gitignore  app.mlir  end_to_end.sh  package-lock.json  package.json  tsconfig.json
js-mlir-translator/mlir-loader/: .gitignore  Makefile  loadmlir.cpp
js-mlir-translator/samples/: test.mlir
js-mlir-translator/src/: app.ts  javascript.ts  mlir.ts
js-mlir-translator/src/mlir/: basic.ts  cf.ts  javascript.ts  standard.ts
js2mlir/: README.md  end_to_end.sh  package-lock.json  package.json  test.js
js2mlir/src/: javascript.ts
js2mlir/src/mlir/: basic.ts
lib/CAPI/: CMakeLists.txt
lib/JavaScript/: CMakeLists.txt
lib/Python/: CMakeLists.txt  FunctionValueTransitionMap.cpp  FunctionValueTransitionMap.h  PythonDomain.cpp  PythonDomain.h  PythonLoadStorePass.cpp  PythonOps.cpp  PythonTypes.cpp  ValueTranslator.h
mlir-loader/: .gitignore  loadmlir.cpp
mlir-loader/dialects/include/mlir/Dialect/JavaScript/: JavaScriptBase.td  JavaScriptOps.td  JavaScriptTypes.h
mlir-loader/dialects/mlir/Dialect/JavaScript/IR/: JavaScriptOps.cpp
py2mlir/: CMakeLists.txt  configure_file.cmake  py2mlir.py.in
python/: .gitignore  CMakeLists.txt
python-mlir-translator/: genmlir.py  prj
python-mlir-translator/example/: insecure_eval.py
python-opt/: PythonDomain.cpp  PythonDomain.h  ValueTranslator.h  python-opt.cpp
python/example/: .gitignore
python/example/scope_tests/: import.py
python/genmlir/: genmlir.py
python/include/: CMakeLists.txt
python/include/JavaScript/: JavaScriptDialect.td  JavaScriptOps.td
python/include/Python/: CMakeLists.txt  PythonOps.h  PythonOps.td  PythonTypes.td
python/lib/JavaScript/: JavaScriptDialect.cpp  JavaScriptTypes.cpp
python/lib/Python/: PythonDialect.cpp
python/mlir_python/dialects/: PythonOps.td  _python_ops_ext.py  python.py
python/python/: CMakeLists.txt
python/python-opt/: python-opt.cpp
python/script-opt/: script-opt.cpp
python/scripts/: run_md5.sh
python/test/: lit.cfg.py
python/test/examples/: dummy.mlir
python/test/script-test/: script-test.cpp
script-opt/: CMakeLists.txt  script-opt.cpp
scripts/: config.sh  run_md5.sh
standalone-python/: CMakeLists.txt  README.md
standalone-python/demos/: optimize_python.sh
standalone-python/example/: for_test.py  insecure_eval.js  md5_example.py  scope_test.py  test_add_overload.py  test_args.py
standalone-python/example/scope_tests/: basic.py  subscript.py
standalone-python/genmlir/: genmlir.py
standalone-python/include/JavaScript/: CMakeLists.txt  JavaScriptDialect.h  JavaScriptOps.h  JavaScriptTypes.td
standalone-python/include/Python/: CMakeLists.txt  PythonDialect.h  PythonDialect.td  PythonOps.h  PythonOps.td  PythonTypes.h  PythonTypes.td
standalone-python/include/Python-c/: Dialects.h
standalone-python/lib/: CMakeLists.txt
standalone-python/lib/CAPI/: CMakeLists.txt  Dialects.cpp
standalone-python/lib/JavaScript/: CMakeLists.txt  JavaScriptOps.cpp
standalone-python/lib/Python/: CMakeLists.txt  PythonDialect.cpp  PythonOps.cpp  PythonTypes.cpp
standalone-python/python/: CMakeLists.txt  PythonExtension.cpp
standalone-python/python-opt/: CMakeLists.txt  PythonDomain.cpp  PythonDomain.h  ValueTranslator.h  python-opt.cpp
standalone-python/python/mlir_python/dialects/: python.py
standalone-python/script-opt/: CMakeLists.txt  script-opt.cpp
standalone-python/scripts/: build.sh  config.sh
standalone-python/standalone-opt/: CMakeLists.txt  standalone-opt.cpp
standalone-python/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
standalone-python/test/CAPI/: CMakeLists.txt  standalone-capi-test.c
standalone-python/test/examples/: dummy.mlir  script-opt.mlir  standalone-opt.mlir
standalone-python/test/python/: smoketest.py
standalone-python/test/script-test/: CMakeLists.txt  script-test.cpp
test/CAPI/: CMakeLists.txt  standalone-capi-test.c
test/script-test/: CMakeLists.txt  script-test.cpp
(+6 files in other folders)
